Fixed whitespace on the right

--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     margin:0;
 }
 
+html, body {
+    overflow-x: hidden;
+}
 body{
     width: 100%;
     height: 100%;
